<resources>
    <string name="app_name">homeWork_5_4_MVVM</string>
    <string name="get_started">Get Started</string>
    <string name="love_calculator">Love Calculator</string>
    <string name="you">You</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="me">Me</string>
    <string name="calculate">Calculate</string>
    <string name="your_score">Your Score</string>
    <string name="try_again">Try Again</string>
    <string name="next">Next</string>
    <string name="it_s_funs_and_many_more">It\'s Funs and Many more</string>
</resources>