<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@drawable/border"
    tools:context="com.example.estebesova_hw_m5_3.ui.ui.activity.MainActivity">

    <ImageView
        android:id="@+id/img_loveCalculator"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@id/ll"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/img_loveCalculator">


        <TextView
            android:id="@+id/tv_loveCalculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/love_calculator"
            android:textColor="#1303F4"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/first_name"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="@drawable/border"
            android:hint="@string/you"
            android:padding="15dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_loveCalculator" />

        <TextView
            android:id="@+id/tv_sname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/second_name"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_sname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="@drawable/border"
            android:hint="@string/me"
            android:padding="15dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_loveCalculator" />

        <Button
            android:id="@+id/btn_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#1303F4"
            android:text="@string/calculate"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>